--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -428,15 +428,25 @@ body {
     display: flex;
     align-items: center;
     padding: 21px 40px;
+
+    cursor: pointer;
     border-radius: 40px;
     border: 1px solid #dcd1c4;
+    transition: border-color linear .2s;
+}
+
+.burger.active,
+.burger:focus,
+.burger:hover {
+    border-color: #f2b354;
 }
 
 .burger__icon {
-    margin-right: 15px;
     position: relative;
     width: 30px;
     height: 20px;
+
+    margin-right: 15px;
 }
 
 .burger__icon::before,
